tests/ui/mut_return.stderr
error: &mut return type is not allowed unless there is a &mut argument
  --> tests/ui/mut_return.rs:10:9
   |
10 |         fn f<'a>(t: &'a Thing) -> Pin<&'a mut CxxString>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: &mut return type is not allowed unless there is a &mut argument
  --> tests/ui/mut_return.rs:14:9
   |
14 |         fn j<'a>(t: &'a Thing) -> &'a mut [u8];
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
